examples/ast-html/src/tests/corpus/snapshots/ast_html__tests__corpus__void_tags@name.snap
---
source: src/tests/corpus/mod.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Document {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
            ],
            _range: Range {
                start_byte: 0,
                end_byte: 72,
                start_point: Point {
                    row: 0,
                    column: 0,
                },
                end_point: Point {
                    row: 0,
                    column: 72,
                },
            },
            _id: 0,
            _parent: None,
        },
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 2,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 11,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 14,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 23,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 72,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 72,
                    },
                },
                _id: 1,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 6,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 6,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 1,
                    end_byte: 5,
                    start_point: Point {
                        row: 0,
                        column: 1,
                    },
                    end_point: Point {
                        row: 0,
                        column: 5,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 5,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 6,
                    end_byte: 31,
                    start_point: Point {
                        row: 0,
                        column: 6,
                    },
                    end_point: Point {
                        row: 0,
                        column: 31,
                    },
                },
                _id: 4,
                _parent: Some(
                    1,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 6,
                    end_byte: 31,
                    start_point: Point {
                        row: 0,
                        column: 6,
                    },
                    end_point: Point {
                        row: 0,
                        column: 31,
                    },
                },
                _id: 5,
                _parent: Some(
                    4,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 7,
                    end_byte: 10,
                    start_point: Point {
                        row: 0,
                        column: 7,
                    },
                    end_point: Point {
                        row: 0,
                        column: 10,
                    },
                },
                _id: 6,
                _parent: Some(
                    5,
                ),
            },
        ),
        Attribute(
            Attribute {
                children: [
                    AstNodeId {
                        id: 8,
                        _marker: PhantomData<ast_html::generated::AttributeName_AttributeValue_QuotedAttributeValue>,
                    },
                    AstNodeId {
                        id: 9,
                        _marker: PhantomData<ast_html::generated::AttributeName_AttributeValue_QuotedAttributeValue>,
                    },
                ],
                _range: Range {
                    start_byte: 11,
                    end_byte: 30,
                    start_point: Point {
                        row: 0,
                        column: 11,
                    },
                    end_point: Point {
                        row: 0,
                        column: 30,
                    },
                },
                _id: 7,
                _parent: Some(
                    5,
                ),
            },
        ),
        AttributeName(
            AttributeName {
                _range: Range {
                    start_byte: 11,
                    end_byte: 14,
                    start_point: Point {
                        row: 0,
                        column: 11,
                    },
                    end_point: Point {
                        row: 0,
                        column: 14,
                    },
                },
                _id: 8,
                _parent: Some(
                    7,
                ),
            },
        ),
        QuotedAttributeValue(
            QuotedAttributeValue {
                children: Some(
                    AstNodeId {
                        id: 10,
                        _marker: PhantomData<ast_html::generated::AttributeValue>,
                    },
                ),
                _range: Range {
                    start_byte: 15,
                    end_byte: 30,
                    start_point: Point {
                        row: 0,
                        column: 15,
                    },
                    end_point: Point {
                        row: 0,
                        column: 30,
                    },
                },
                _id: 9,
                _parent: Some(
                    7,
                ),
            },
        ),
        AttributeValue {
            _range: Range {
                start_byte: 16,
                end_byte: 29,
                start_point: Point {
                    row: 0,
                    column: 16,
                },
                end_point: Point {
                    row: 0,
                    column: 29,
                },
            },
            _id: 10,
            _parent: Some(
                9,
            ),
        },
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 12,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 31,
                    end_byte: 35,
                    start_point: Point {
                        row: 0,
                        column: 31,
                    },
                    end_point: Point {
                        row: 0,
                        column: 35,
                    },
                },
                _id: 11,
                _parent: Some(
                    1,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 13,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 31,
                    end_byte: 35,
                    start_point: Point {
                        row: 0,
                        column: 31,
                    },
                    end_point: Point {
                        row: 0,
                        column: 35,
                    },
                },
                _id: 12,
                _parent: Some(
                    11,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 32,
                    end_byte: 34,
                    start_point: Point {
                        row: 0,
                        column: 32,
                    },
                    end_point: Point {
                        row: 0,
                        column: 34,
                    },
                },
                _id: 13,
                _parent: Some(
                    12,
                ),
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 15,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 35,
                    end_byte: 65,
                    start_point: Point {
                        row: 0,
                        column: 35,
                    },
                    end_point: Point {
                        row: 0,
                        column: 65,
                    },
                },
                _id: 14,
                _parent: Some(
                    1,
                ),
            },
        ),
        SelfClosingTag(
            SelfClosingTag {
                children: [
                    AstNodeId {
                        id: 16,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                    AstNodeId {
                        id: 17,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                    AstNodeId {
                        id: 20,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 35,
                    end_byte: 65,
                    start_point: Point {
                        row: 0,
                        column: 35,
                    },
                    end_point: Point {
                        row: 0,
                        column: 65,
                    },
                },
                _id: 15,
                _parent: Some(
                    14,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 36,
                    end_byte: 41,
                    start_point: Point {
                        row: 0,
                        column: 36,
                    },
                    end_point: Point {
                        row: 0,
                        column: 41,
                    },
                },
                _id: 16,
                _parent: Some(
                    15,
                ),
            },
        ),
        Attribute(
            Attribute {
                children: [
                    AstNodeId {
                        id: 18,
                        _marker: PhantomData<ast_html::generated::AttributeName_AttributeValue_QuotedAttributeValue>,
                    },
                    AstNodeId {
                        id: 19,
                        _marker: PhantomData<ast_html::generated::AttributeName_AttributeValue_QuotedAttributeValue>,
                    },
                ],
                _range: Range {
                    start_byte: 42,
                    end_byte: 53,
                    start_point: Point {
                        row: 0,
                        column: 42,
                    },
                    end_point: Point {
                        row: 0,
                        column: 53,
                    },
                },
                _id: 17,
                _parent: Some(
                    15,
                ),
            },
        ),
        AttributeName(
            AttributeName {
                _range: Range {
                    start_byte: 42,
                    end_byte: 46,
                    start_point: Point {
                        row: 0,
                        column: 42,
                    },
                    end_point: Point {
                        row: 0,
                        column: 46,
                    },
                },
                _id: 18,
                _parent: Some(
                    17,
                ),
            },
        ),
        AttributeValue(
            AttributeValue {
                _range: Range {
                    start_byte: 47,
                    end_byte: 53,
                    start_point: Point {
                        row: 0,
                        column: 47,
                    },
                    end_point: Point {
                        row: 0,
                        column: 53,
                    },
                },
                _id: 19,
                _parent: Some(
                    17,
                ),
            },
        ),
        Attribute(
            Attribute {
                children: [
                    AstNodeId {
                        id: 21,
                        _marker: PhantomData<ast_html::generated::AttributeName_AttributeValue_QuotedAttributeValue>,
                    },
                    AstNodeId {
                        id: 22,
                        _marker: PhantomData<ast_html::generated::AttributeName_AttributeValue_QuotedAttributeValue>,
                    },
                ],
                _range: Range {
                    start_byte: 54,
                    end_byte: 62,
                    start_point: Point {
                        row: 0,
                        column: 54,
                    },
                    end_point: Point {
                        row: 0,
                        column: 62,
                    },
                },
                _id: 20,
                _parent: Some(
                    15,
                ),
            },
        ),
        AttributeName(
            AttributeName {
                _range: Range {
                    start_byte: 54,
                    end_byte: 59,
                    start_point: Point {
                        row: 0,
                        column: 54,
                    },
                    end_point: Point {
                        row: 0,
                        column: 59,
                    },
                },
                _id: 21,
                _parent: Some(
                    20,
                ),
            },
        ),
        AttributeValue(
            AttributeValue {
                _range: Range {
                    start_byte: 60,
                    end_byte: 62,
                    start_point: Point {
                        row: 0,
                        column: 60,
                    },
                    end_point: Point {
                        row: 0,
                        column: 62,
                    },
                },
                _id: 22,
                _parent: Some(
                    20,
                ),
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 24,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 65,
                    end_byte: 72,
                    start_point: Point {
                        row: 0,
                        column: 65,
                    },
                    end_point: Point {
                        row: 0,
                        column: 72,
                    },
                },
                _id: 23,
                _parent: Some(
                    1,
                ),
            },
        ),
        TagName {
            _range: Range {
                start_byte: 67,
                end_byte: 71,
                start_point: Point {
                    row: 0,
                    column: 67,
                },
                end_point: Point {
                    row: 0,
                    column: 71,
                },
            },
            _id: 24,
            _parent: Some(
                23,
            ),
        },
    ],
}
